# vox-terminal

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  VoxTerminal.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
dictate/: __init__.py  __main__.py  autostart.py  benchmark.py  config.py  controller.py  doctor.py  engines.py  history.py  hotkey.py  injector.py  latency.py  latency_benchmark.py  lightweight_imports.py  logging_config.py  mel.py  menubar.py  model_manager.py  network.py  paths.py  performance_audit.py  postprocess.py  recorder.py  settings.py  transcriber.py  vad.py
scripts/: benchmark_latency.py  benchmark_parakeet.py  bootstrap.sh  build_icon.py  build_icon.sh  com.user.dictate.plist  crash_feedback.py  generate_sbom.py  install.sh  install_app.sh  notarize_app.sh  package_release.sh  performance_audit.py  phase0_spike.py  project_version.py  sign_app.sh  verify_app.sh  vox_terminal_app.py
tests/: __init__.py  test_autostart.py  test_benchmark.py  test_cli.py  test_config.py  test_controller.py  test_doctor.py  test_engines.py  test_history.py  test_hotkey.py  test_injector.py  test_latency.py  test_latency_benchmark.py  test_lightweight_imports.py  test_logging_config.py  test_mel.py  test_menubar.py  test_model_manager.py  test_no_network.py  test_performance_audit.py  test_postprocess.py  test_recorder.py  test_service.py  test_transcriber.py  test_vad.py  test_version.py
