[project]
name = "vox-terminal"
version = "0.1.0"
description = "Local macOS push-to-talk dictation for terminals and apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper",
    "numpy",
    "pynput",
    "pyobjc-framework-Quartz",
    "rumps",
    "silero-vad",
    "sounddevice",
]

[tool.uv]
package = false
